refactore/ Arrumando service